<resources>
    <string name="app_name">SecureReco</string>
    <string name="enter_password">Please enter password:</string>
    <string name="hint_password">password</string>
    <string name="start_button">Start!</string>
    <string name="text_greeting">Hello! Welcome!</string>
    <string name="menu_item_authenticate">Authenticate</string>
    <string name="menu_item_deauthenticate">De-authenticate</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_on_off">Enabled</string>
    <string name="menu_item_delete_selected">Delete</string>
    <string name="menu_item_notification">Notification</string>
    <string name="toast_authenticated">Authenticated</string>
    <string name="toast_deauthenticated">De-authenticated</string>
    <string name="toast_auth_error">Authentication error</string>
    <string name="toast_records_deleted">Records deleted</string>
    <string name="toast_nothing_to_delete">Nothing to delete</string>
    <string name="toast_keys_regen_update_started">Updating call records started</string>
    <string name="toast_keys_regen_update_finished">Updating call records finished</string>
    <string name="toast_invalid_input">Invalid input</string>
    <string name="toast_password_changed">Password changed</string>
    <string name="toast_please_enter_password">Please enter password</string>
    <string name="toast_media_player_failed_init">Failed to initialize MediaPlayer</string>
    <string name="password_dialog_button_ok">OK</string>
    <string name="password_dialog_button_cancel">Cancel</string>
    <string name="activity_settings_regenerate_button">Re-generate</string>
    <string name="activity_settings_regenerate_header">Regenerate RSA key-pair</string>
    <string name="activity_settings_change_password_button">Change</string>
    <string name="activity_settings_change_password_header">Change password</string>
    <string name="activity_settings_reset_auth_header">Reset authentication strategy</string>
    <string-array name="reset_auth_strategy_array">
        <item>No / Keep authenticated</item>
        <item>When app goes to background</item>
        <item>On timeout of inactivity / 60 sec</item>
    </string-array>
    <string-array name="notification_colors">
        <item>Day</item>
        <item>Night</item>
    </string-array>
    <string name="toast_keys_regen_changed">Keys changed. Updating all the call records...</string>
    <string name="toast_keys_regen_update_nothing">There are no call records to update</string>
    <string name="main_activity_no_call_records">No call records available</string>
    <string name="activity_settings_change_folder_header">Change folder</string>
    <string name="activity_settings_change_folder_button">Change</string>
    <string name="activity_settings_notification_color_header">Notification colors</string>
    <string name="toast_calls_folder_changing">Moving call records to new folder...</string>
    <string name="toast_calls_folder_changed">Call records moved</string>
    <string name="toast_error_changing_password">Error changing password</string>
    <string name="activity_settings_audio_source_header">Audio source</string>
    <string name="action_bar_query_hint">Search...</string>
    <string name="activity_settings_password_hint">password</string>
    <string name="activity_settings_password_again_hint">password again</string>
    <string name="enterFileName">Enter file name:</string>
    <string name="saveButtonText">Save</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="cannotSaveFileMessage">Cannot save file</string>
    <string name="fileNameFirstMessage">Please enter the file name first</string>
    <string name="okButtonText">OK</string>
    <string name="loadButtonText">Load</string>
    <string name="accessDenied">Access denied</string>
    <string name="missingFile">No such file</string>
    <string name="newFolderButtonText">New folder</string>
    <string name="newFolderDialogMessage">Create new folder</string>
    <string name="createButtonText">Create</string>
    <string name="folderCreationOk">Folder created successfully</string>
    <string name="folderCreationError">Error while creating folder</string>
    <string name="information">Information</string>
    <string name="call_exported_successfully">Call exported successfully</string>
    <string name="call_exported_with_error">Error exporting call</string>
    <string name="toast_calls_folder_is_same">Can\'t move call logs to the same folder</string>
    <string name="notification_start_record_question">Start record?</string>
    <string name="notification_start_record_name_format">Call: %s</string>
    <string name="notification_record_started_header">Record started</string>
    <string name="notification_record_finished_header">Recording finished</string>
    <string name="toast_record_deleted">Record deleted</string>

</resources>
